# GLFunctionLoader

./: .gitignore  CMakeLists.txt  glfl.py  opengl-loader.py
glfl/commands/: glcorearb_command.py  glext_command.py  info_command.py
glfl/files/: glfl_gl_file.py
glfl/khronos/: khronos_gl_parser.py
glfl/requests/: downloader.py
glfl/utils/: file_utils.py
includes/: gl_function_loader.hpp
includes/GL/: glfl-glcorearb.hpp  glfl-glext.hpp
includes/glfl/: glfl-glcorearb.hpp
utils/: glfl_dir.py  glfl_download.py  glfl_file.py
